--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,42 @@
 plugins {
-    id 'java'
+	id 'java'
+	id 'com.diffplug.spotless' version "6.2.0"
+
+
 }
 
 group 'io.makepad'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
+spotless {
+	format("misc") {
+		target("*.gradle", "*.md", ".gitignore")
+		// define the steps to apply to those files
+		trimTrailingWhitespace()
+		indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
+		endWithNewline()
+	}
+	java {
+		target("src/*/java/**/*.java")
+		// optional: you can specify a specific version and/or switch to AOSP style
+		//   and/or reflow long strings (requires at least 1.8)
+		//   and/or use custom group artifact (you probably don't need this)
+		googleJavaFormat("1.12.0").aosp().reflowLongStrings().groupArtifact("com.google.googlejavaformat:google-java-format")
+		licenseHeader ("/*\n\t(c) Makepad Developers <dev@makepad.fr>\n*/")
+	}
+}
+
+
+
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
-    useJUnitPlatform()
+	useJUnitPlatform()
 }
